tests/error/comptime/check_slice_construction10.bz
// error: invalid memory range for a slice of type '[: const int32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different global objects
// note: begin address points to this global object
// note: end address points to this global object
// error: failed to evaluate expression at compile time
consteval i = 0;
consteval j = 0;

function test()
{
	(consteval {
		__builtin_slice_from_const_ptrs(&i, &j);
	});
}
